--- a/client/components/productcard/style.module.scss
+++ b/client/components/productcard/style.module.scss
@@ -3,14 +3,14 @@
 .card {
   box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
   background-color: #f9f9f9;
-  height: auto;
+  height: 75rem;
   width: 44rem;
   padding: 2rem;
   font-weight: 500;
-  margin-bottom: 3rem;
 
-  @include md {
+  @include lg {
     width: 35rem;
+    height: 53rem;
     padding: 3rem;
     margin: auto;
   }
@@ -18,16 +18,23 @@
 
 .preview {
   width: 40rem;
-  height: auto;
+  height: 53rem;
   background-color: lightblue;
+
   img {
     object-fit: contain;
     height: auto;
     width: 100%;
   }
 
-  @include md {
-    width: 29rem;
+  @include lg {
+    width: 28rem;
+    height: 37rem;
+  }
+
+  @include xl {
+    width: 28rem;
+    height: 37rem;
   }
 }
 
@@ -35,8 +42,11 @@
   font-size: 5rem;
   font-weight: 700;
   margin: 1rem 0;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 
-  @include md {
+  @include lg {
     font-size: 3rem;
     margin: .4rem 0;
   }
@@ -44,8 +54,11 @@
 
 .description, .size {
   font-size: 4rem;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 
-  @include md {
+  @include lg {
     font-size: 2rem;
   }
 }
