--- a/client/components/searchbar/style.module.scss
+++ b/client/components/searchbar/style.module.scss
@@ -8,7 +8,7 @@
   align-items: center;
   padding: 3rem 0;
 
-  @include md {
+  @include lg {
     height: 10rem;
     padding: 2rem 0;
   }
@@ -26,7 +26,7 @@
   font-size: 5rem;
   padding: 1rem 2rem;
 
-  @include md {
+  @include lg {
     font-size: 1.6rem;
   }
 }
