--- a/client/index.module.scss
+++ b/client/index.module.scss
@@ -1,13 +1,6 @@
 html {
-  // font-size: 62.5%;
+  //setting rem value
   font-size: 10px;
-} /* font-size: 62.5% now means that 1.0 rem = 10px */
-* {
-  font-size: 1.4rem;
-  line-height: 1.6rem;
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
 }
 
 body {
@@ -17,7 +10,9 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-color: #f9f9fe;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
+// universal reset
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
